# My_Hero_Goverment

./: .example.env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/infra/: db.py  models.py  security.py
app/presentation/web/: fake_repo.py  templates_env.py
app/presentation/web/routes/: admin_routes.py  auth_routes.py  mentor_routes.py  student_routes.py
app/presentation/web/static/css/: app.css
app/presentation/web/static/js/: app.js
app/presentation/web/templates/: layout.html
app/presentation/web/templates/admin/: dashboard.html  review_detail.html  reviews.html  schools.html  task_detail.html  tasks.html  users.html
app/presentation/web/templates/auth/: login.html
app/presentation/web/templates/components/: _nav.html  _toast.html
app/presentation/web/templates/mentor/: dashboard.html  review_detail.html
app/presentation/web/templates/student/: dashboard.html  history.html  profile.html  task_detail.html  tasks.html
app/scripts/: create_admin.py
my_hero_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
