[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-hero-mvp"
version = "0.1.0"
description = "My Hero MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg[binary]",
    "python-dotenv",
    "jinja2",
    "python-multipart",
    "passlib[bcrypt]",
    "bcrypt",
    "pydantic",
    "pydantic-settings",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["uploads*"]